# talks

./: README.md
Journal_Club_DataLab_2022_01_22/: leaf_embeddings.ipynb  requirements.txt
Journal_Club_DataLab_2022_02_25/: multi_armed_bandits.ipynb  utils.py
Journal_Club_Itau_2019_12_18/notebooks/: AG1 - Otimização de funções.ipynb  AG2 - Plot senos-complexidade.ipynb  AG3 - Symbolic Regression.ipynb
Journal_Club_Itau_2020_01_24/: anomaly_detection.ipynb
Journal_Club_Itau_2020_03_06/: bom_dia.py  multi_armed_bandits.ipynb
Journal_Club_Itau_2020_08_14/notebooks/: covariate_shift.ipynb
Journal_Club_Itau_2021_08_10/: out_of_distribution_generalization.ipynb
Training_DataLab_2022_08_31/: Estatistica.ipynb  Probabilidade.ipynb  README.md  pyproject.toml
