[tool.poetry]
name = "training_datalab_prob"
version = "0.1.0"
description = "packages for reproducing the training notebooks"
authors = ["vitaliset"]

[tool.poetry.dependencies]
python = "3.9.6"
numpy = "1.23.2"
pandas = "1.4.3"
matplotlib = "3.5.3"
scikit-learn = "1.1.2"
seaborn = "0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"